--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="content">
             
             <header class="content_title">
-                <h1 class="title">María Dolores Hernández Veliz</h1>
+                <h1 class="title">María Hernández Veliz</h1>
             </header>
             
             <div class="info">
