--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             </div>
             <ul>
                 <!-- Lista de proyectos -->
-                <li onclick="location.href='http://www.google.com'">Proyecto 1</li>
-                <li onclick="location.href='http://www.google.com'">Proyecto 2</li>
-                <li onclick="location.href='http://www.google.com'">Proyecto 3</li>
-                <li onclick="location.href='http://www.google.com'">Proyecto 4</li>
+                <li onclick="location.href='http://www.google.com'">Evalución1</li>
+                <li onclick="location.href='http://www.google.com'">Evalución2</li>
+                <li onclick="location.href='http://www.google.com'">Evalución3</li>
+                <li onclick="location.href='http://www.google.com'">Evalución4</li>
+                <li onclick="location.href='http://www.google.com'">Evalución5</li>
 
             </ul>
         </div>
